# Checkbe

./: .gitignore  Cargo.toml  LICENSE  README.md  test  typetest_bad  typetest_ok
docs/: README.md  compiler-usage.md  examples-and-gotchas.md  functions-and-control-flow.md  language-overview.md  modules-and-runtime.md  syntax-and-types.md
examples/: entitlements.checkbe  helloworld.checkbe  interp.checkbe  math.checkbe  net.checkbe  tests.checkbe
examples/greeting/: greeting.checkbe  main.checkbe
runtime/core/: runtime.c
runtime/modules/Bridge/: bridge.c  module.toml
runtime/modules/Math/: math.c  module.toml
runtime/modules/Network/: module.toml  network.c
src/: ast.rs  codegen.rs  diagnostics.rs  install.rs  lexer.rs  main.rs  module_system.rs  multi_source.rs  parser.rs  runtime.rs  sema.rs  span.rs  string_interp.rs  token.rs
src/codegen/: generator.rs  mod.rs
src/codegen/parts/: base.rs  expressions_a.rs  expressions_b.rs  statements.rs
src/sema/: mod.rs
src/sema/parts/: base.rs  expressions_a.rs  expressions_b.rs  statements.rs
