[package]
name = "checkbe"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.8.0", default-features = false, features = ["llvm18-1-prefer-dynamic", "target-aarch64", "target-x86"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
tempfile = "3.13"
